# trading_eda_plat

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
eda_platform/: cross_analyses_tab.py  main.py
eda_platform/data_providers/: data_provider_ioc.py  provider.py
research/: Backtrader_example.ipynb  data_loading.ipynb  support_resistence_levels_551062_8f3ee7-551062-674d5e.ipynb
tester/: tester_ccxt.py
